--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.19",
+    "tti-polyfill": "^0.2.2",
     "typeface-arvo": "0.0.72",
     "typeface-cabin": "0.0.72",
     "typography": "^0.16.19",
