--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-react-helmet": "^3.0.8",
     "gatsby-plugin-sharp": "^2.0.25",
     "gatsby-plugin-typography": "^2.2.8",
+    "gatsby-remark-autolink-headers": "^2.0.16",
     "gatsby-remark-copy-linked-files": "^2.0.9",
     "gatsby-remark-embed-video": "^1.7.0",
     "gatsby-remark-images": "^2.0.6",
