--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "gatsby": "^2.1.27",
     "gatsby-image": "^2.0.31",
     "gatsby-plugin-feed": "^2.0.14",
-    "gatsby-plugin-google-analytics": "^2.0.16",
+    "gatsby-plugin-gtag": "^1.0.8",
     "gatsby-plugin-mailchimp": "^5.0.0",
     "gatsby-plugin-manifest": "^2.0.22",
     "gatsby-plugin-offline": "^2.0.24",
