--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+  },
+  "resolutions": {
+    "sharp": "0.24.0"
   }
 }
