--- a/package.json
+++ b/package.json
@@ -13,19 +13,23 @@
     "gatsby-plugin-feed": "^2.0.14",
     "gatsby-plugin-gtag": "^1.0.8",
     "gatsby-plugin-mailchimp": "^5.0.0",
+    "gatsby-plugin-manifest": "^2.12.0",
     "gatsby-plugin-react-helmet": "^3.0.8",
-    "gatsby-plugin-sharp": "^2.0.32",
+    "gatsby-plugin-sharp": "^2.14.1",
     "gatsby-plugin-typography": "^2.2.8",
     "gatsby-remark-autolink-headers": "^2.0.16",
     "gatsby-remark-copy-linked-files": "^2.0.9",
     "gatsby-remark-embed-video": "^1.7.0",
     "gatsby-remark-images": "^2.0.6",
+    "gatsby-remark-images-contentful": "^2.10.0",
     "gatsby-remark-prismjs": "^3.2.4",
     "gatsby-remark-responsive-iframe": "^2.0.9",
     "gatsby-remark-smartypants": "^2.0.8",
+    "gatsby-source-contentful": "^4.6.1",
     "gatsby-source-filesystem": "^2.0.23",
     "gatsby-transformer-remark": "^2.3.1",
-    "gatsby-transformer-sharp": "^2.1.15",
+    "gatsby-transformer-sharp": "^2.12.0",
+    "gatsby-transformer-sqip": "^2.11.1",
     "prismjs": "^1.15.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
@@ -57,8 +61,5 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
-  },
-  "resolutions": {
-    "sharp": "0.24.0"
   }
 }
